# astronomy-libraries-test

./: .gitignore  LICENSE  README.md  aa_wwt.html  compare.ipynb  lrd_winner.html  main.py  package.json  pyproject.toml  run-first-test-methods-to-check.js  sf_aa.html  sf_wwt.html  skyfield_methods_to_check.py  test_inputs.json  tests.js
aa-js/: aa-js.js  aa-js.umd.cjs  constants.d.ts  constants.d.ts.map  distances.d.ts  distances.d.ts.map  exoplanets.d.ts  exoplanets.d.ts.map  index.d.ts  index.d.ts.map  juliandays.d.ts  juliandays.d.ts.map  sexagesimal.d.ts  sexagesimal.d.ts.map  utils.d.ts  utils.d.ts.map
aa-js/coordinates/: angles.d.ts  angles.d.ts.map  ecliptic2equatorial.d.ts  ecliptic2equatorial.d.ts.map  equatorial2ecliptic.d.ts  equatorial2ecliptic.d.ts.map  equatorial2galactic.d.ts  equatorial2galactic.d.ts.map  equatorial2horizontal.d.ts  equatorial2horizontal.d.ts.map  equatorial2topocentric.d.ts  equatorial2topocentric.d.ts.map  fk5.d.ts  fk5.d.ts.map  galactic2equatorial.d.ts  galactic2equatorial.d.ts.map  horizontal2equatorial.d.ts  horizontal2equatorial.d.ts.map  index.d.ts  index.d.ts.map  pointsHorizontal.d.ts  pointsHorizontal.d.ts.map  precession.d.ts  precession.d.ts.map
aa-js/cosmology/: ages.d.ts  ages.d.ts.map  distances.d.ts  distances.d.ts.map  index.d.ts  index.d.ts.map  omegas.d.ts  omegas.d.ts.map  utils.d.ts  utils.d.ts.map  volumes.d.ts  volumes.d.ts.map
outputs/: .gitkeep  methods_to_check_aa_records.json  methods_to_check_skyfield_records.json  methods_to_check_wwt_records.json
wwtlib/: index.js  index.js.map  index.min.js
(+180 files in other folders)
