[project]
name = "astronomy-libraries-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "pandas>=2.2",
    "skyfield>=1.54",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
